# multiversum

./: .dockerignore  .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  formatting.yml  test.yml
docs/: cli.md  index.md  multiversum_logo.afdesign
docs/api/: config.md  multiverse_analysis.md  universe.md
examples/scikit-learn--py/: multiverse.py  universe.py
examples/scikit-learn--simple/: multiverse.toml  universe.ipynb
multiversum/: __init__.py  __main__.py  cli.py  cli_helpers.py  helpers.py  logger.py  multiverse.py  parallel.py  universe.py
tests/: test_cli.py  test_cli_helpers.py  test_constraints.py  test_multiverse.py  test_universe.py
tests/notebooks/: simple.ipynb  simple.json  slow.ipynb
tests/scenarios/: multiverse_simple_a.json  multiverse_simple_b.toml  multiverse_simple_c.py  universe_error.ipynb  universe_simple.ipynb  universe_simple.py
tests/temp/test_CLI_simple/: multiverse_grid.json
tests/temp/test_CLI_simple/runs/1/data/: d_1_0b73fc31fd9c2d6e1bcd6b23f580898b.csv  d_1_47899ae546a9854ebfe2de7396eff9fa.csv  d_1_6dffec9eaa199f6f57ab70e40f41be45.csv  d_1_ffa9b24041c120dd216c98b8b02f581c.csv
tests/temp/test_CLI_simple/runs/1/universes/: nb_1-0b73fc31fd9c2d6e1bcd6b23f580898b.ipynb  nb_1-47899ae546a9854ebfe2de7396eff9fa.ipynb  nb_1-6dffec9eaa199f6f57ab70e40f41be45.ipynb  nb_1-ffa9b24041c120dd216c98b8b02f581c.ipynb
tests/temp/test_MultiverseAnalysis_check_missing_universes_with_errors/runs/1/data/: d_1_47899ae546a9854ebfe2de7396eff9fa.csv  (+3 more)
tests/temp/test_save_grid_format/: multiverse_grid.csv
(+59 files in other folders)
