[project]
name = "multiverse"
version = "0.1"
description = "null"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Jan Simson"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/jansim/multiverse"
Changelog = "https://github.com/jansim/multiverse/releases"
Issues = "https://github.com/jansim/multiverse/issues"
CI = "https://github.com/jansim/multiverse/actions"


[project.optional-dependencies]
test = ["pytest"]
